# flutter_llama

./: .gitignore  CHANGELOG.md  pubspec.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt
example/assets/models/: braindler-q2_k.gguf
ios/: flutter_llama.podspec
ios/Classes/: FlutterLlamaPlugin.swift  llama_cpp_bridge.mm
ios/llama.xcframework/ios-arm64_x86_64-simulator/llama.framework/: Info.plist
llama.cpp/: build-xcframework.sh
macos/Classes/: llama_cpp_bridge.mm
